<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/sunday"
        android:textOff="@string/sunday"
        android:id="@+id/radioButton_su"
        android:layout_gravity="left|center_horizontal" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/monday"
        android:textOff="@string/monday"
        android:id="@+id/radioButton_mo"
        android:layout_gravity="left|center_horizontal" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/tuesday"
        android:textOff="@string/tuesday"
        android:id="@+id/radioButton_tu"
        android:layout_gravity="left|center_horizontal" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/wednesday"
        android:textOff="@string/wednesday"
        android:id="@+id/radioButton_we"
        android:layout_gravity="left|center_horizontal" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/thursday"
        android:textOff="@string/thursday"
        android:id="@+id/radioButton_th"
        android:layout_gravity="left|center_horizontal" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/friday"
        android:textOff="@string/friday"
        android:id="@+id/radioButton_fr"
        android:layout_gravity="left|center_horizontal" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/saturday"
        android:textOff="@string/saturday"
        android:id="@+id/radioButton_sa"
        android:layout_gravity="left|center_horizontal" />

</LinearLayout>